--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,12 @@
     "icons": [
 
         {
-          "src": "https://github.com/SarahAlya01/calendar/blob/main/android-chrome-192x192.png",
+          "src": "./calendar/android-chrome-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
       },
       {
-          "src": "https://github.com/SarahAlya01/calendar/blob/main/android-chrome-512x512.png",
+          "src": "./calendar/android-chrome-512x512.png",
           "sizes": "512x512",
           "type": "image/png"
       }
